# Wave-Native-Network

./: CMakeLists.txt  LICENSE  README.md  fix_phy_listener_logic.py  patch_calib.py  patch_calib_stdmin.py  patch_pass2.py  patch_pass2_fix.py  patch_pass3.py  patch_pass4.py  patch_pass5.py  patch_pass5_fix.py  patch_review_fixes.py  patch_step.py  patch_wave_state.py  patch_wavefrontd.py  wnn_config.json
.github/workflows/: ci.yml
data/: ablation_study.csv  handoff_continuity.csv  jitter_robustness.csv  phase_locking.csv  replay_attack.csv  scalability.csv
docs/: PAPER.md
examples/: wnn_vehicle_demo.cpp
mesh_legacy/: mesh_discovery.cpp  mesh_discovery.hpp  peer_routing.cpp  peer_routing.hpp  zk_verifier.cpp  zk_verifier.hpp
results/: replay_statistics.txt
simulations/: CMakeLists.txt  generate_figures.py  run_ablation.cpp  run_handoff.cpp  run_jitter_robustness.cpp  run_phase_locking.cpp  run_pipeline.sh  run_replay_attack.cpp  run_scalability.cpp  simulation_common.hpp
src/: ambient_verifier.cpp  ambient_verifier.hpp  calibration.cpp  calibration.hpp  mesh_discovery.cpp  mesh_discovery.hpp  pll_controller.cpp  pll_controller.hpp  routing_engine.cpp  routing_engine.hpp  safety_guardrails.cpp  safety_guardrails.hpp  wave_native_network.hpp  wave_state.hpp  wavefrontd.cpp
src/config/: wnn_config.hpp
src/distributed_pll/: distributed_pll_controller.cpp  distributed_pll_controller.hpp
src/infrastructure_segment/: BareMetalEngine.cpp  BareMetalEngine.hpp
src/interceptor/: phy_listener.cpp  phy_listener.hpp
src/mesh_orchestrator/: mesh_orchestrator.cpp  mesh_orchestrator.hpp
src/space_segment/: PhaseCoherenceAnchor.cpp  PhaseCoherenceAnchor.hpp
src/sync_membrane/: SyncMembrane.cpp  SyncMembrane.hpp
wnn_simulations/: CMakeLists.txt  convergence_log.csv  generate_figures.py  handoff_log.csv  pcap.h  run_pipeline.sh  scalability_log.csv  security_log.csv  wnn_sim_runner.cpp
